fix sidebar overlap

--- a/app/styles/_views.scss
+++ b/app/styles/_views.scss
@@ -149,7 +149,7 @@ header {
 
 .sidebar-fixed {
 	.video-content {
-		padding-left: 26%;
+		padding-left: 33%;
 	}
 	.video-sidebar {
 		position: fixed;
